--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,9 +1,9 @@
 name: Go
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,11 +12,11 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.22'
+          go-version: "1.22"
       - name: Build
         run: go build -v ./...
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.56.2
+          version: v1.64.5
           args: -c .golangci.yaml
