--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 .env
 
+# Test coverage
+*.out
+
 #Frontend
 
 # Node.js
@@ -25,4 +28,3 @@ npm-debug.log*
 yarn-debug.log*
 pnpm-debug.log*
 lerna-debug.log*
-
