--- a/.env
+++ b/.env
@@ -1,18 +1,14 @@
 DB_HOST=localhost
-DB_USER=
-DB_PASSWORD=
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_NAME=price_negotiation
 DB_PORT=5432
 SERVER_PORT=8080
 
-ACCESS_KEY=your_secret_key_here
-SECRET_KEY=your_secret_key_here
+ACCESS_KEY=YCAJEA42mQqWIYN-INQRF0DTI
+SECRET_KEY=YCM1PQy6UGDHD7sKi2Q3nBDDyur8fZFEfSEC33Fn
 BUCKET_NAME=stawberry
 URL=https://storage.yandexcloud.net
 SIGNING_REGION=ru-central1
-
-TOKEN_SECRET=your_secret_key_here
-TOKEN_ACCESS_DURATION=15m
-TOKEN_REFRESH_DURATION=24h
 
 ENVIRONMENT=dev
