--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,12 @@ DB_USER=
 DB_PASSWORD=
 DB_NAME=price_negotiation
 DB_PORT=5432
+DB_MAX_OPEN_CONNS=25
+DB_MAX_IDLE_CONNS=10
+
+SERVER_DOMAIN=example.com
 SERVER_PORT=8080
+GIN_MODE=debug
 
 ACCESS_KEY=your_secret_key_here
 SECRET_KEY=your_secret_key_here
