feature: email notifications

--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,12 @@ TOKEN_SECRET=your_secret_key_here
 TOKEN_ACCESS_DURATION=15m
 TOKEN_REFRESH_DURATION=24h
 
+EMAIL_ENABLED=true/false
+FROM_EMAIL=your_business_email
+FROM_PASSWORD=your_application_password
+SMTP_HOST=smtp_server
+SMTP_PORT=587
+EMAIL_WORKER_POOL=10# number of worker threads for sending emails
+EMAIL_QUEUE_SIZE=100
+
 ENVIRONMENT=dev
