--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea
 
 .env
+.DS_Store
 
 # Test coverage
 *.out
@@ -28,5 +29,4 @@ npm-debug.log*
 yarn-debug.log*
 pnpm-debug.log*
 lerna-debug.log*
-
 tmp/
