Чинит мастер после мержей (#22)
* Add error checking to json.Unmarshal in review tests

* Приводит в порядок роуты

* Фиксит проблему unused-parameter

* Исправляет правило var-naming

* Отключает проверку G115

* Глушит правило exported — добавить комменты ко всем экспортированным
символам

* Исправляет слишком длинные строки и непойманные ошибки

* Глушит проблему с тестами

* Фиксит версию golangci-lint

* Ещё раз фиксит github action

* Добавляет проверку для errcheck

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -10,10 +10,23 @@ linters:
     - cyclop # checks function and package cyclomatic complexity
     - gocognit # checks function cognitive complexity
     - godox # tool for detection of F*IXME, T*ODO and other comment keywords
-    - gofmt # checks if the code is formatted according to 'gofmt' command
-    - goimports # Checks if the code and import statements are formatted according to the 'goimports' command
     - lll # reports long lines
     - rowserrcheck # checks whether Rows.Err of rows is checked successfully
-    - gosimple # Detects overly complex code that can be simplified
     - revive # Enable after old code is removed
     - gosec # Security linter. Enable later.
+  settings:
+    errcheck:
+      exclude-functions:
+        - (*github.com/gin-gonic/gin.Context).Error
+    revive:
+      rules:
+        - name: exported
+          disabled: true
+    gosec:
+      excludes:
+        - G115
+
+formatters:
+  enable:
+    - gofmt # checks if the code is formatted according to 'gofmt' command
+    - goimports # Checks if the code and import statements are formatted according to the 'goimports' command
