--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -5,18 +5,16 @@ on:
   pull_request:
     branches: ["master"]
 jobs:
-  build:
+  golang-ci:
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
-      - name: Build
-        run: go build -v ./...
+          go-version: "1.23"
       - name: Lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.64.5
+          version: v2.1.6
           args: -c .golangci.yaml
