--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -7,7 +7,8 @@ linters:
     - unused # checks Go code for unused constants, variables, functions and types
     - prealloc # finds slice declarations that could potentially be pre-allocated
     - bodyclose # checks whether HTTP response body is closed successfully
-    - cyclop # checks function and package cyclomatic complexity
+    # Temporary turned off
+    # - cyclop # checks function and package cyclomatic complexity
     - gocognit # checks function cognitive complexity
     - godox # tool for detection of F*IXME, T*ODO and other comment keywords
     - lll # reports long lines
