--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -18,3 +18,25 @@ jobs:
         with:
           version: v2.1.6
           args: -c .golangci.yaml
+  swag-docs:
+    name: swagger-gen
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.23"
+      - name: Generate Swagger Docs
+        run: |
+          go install github.com/swaggo/swag/cmd/swag@latest
+          swag init -g ./internal/handler/api.go -o docs
+      - name: Commit Documentation
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add docs/*
+          git commit -m "docs: update swagger documentation [ci skip]" || echo "No changes to commit"
+          git push
