--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,9 +1,13 @@
 name: Go
 on:
   push:
-    branches: ["master"]
+    branches:
+      - master
+      - main
   pull_request:
-    branches: ["master"]
+    branches:
+      - master
+      - main
 jobs:
   golang-ci:
     name: lint
