--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -28,7 +28,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: true
       - uses: actions/setup-go@v5
         with:
@@ -43,4 +42,8 @@ jobs:
           git config --global user.email "actions@github.com"
           git add docs/*
           git commit -m "docs: update swagger documentation [ci skip]" || echo "No changes to commit"
-          git push
+      - name: Push Changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
