--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -24,6 +24,7 @@ jobs:
           args: -c .golangci.yaml
   swag-docs:
     name: swagger-gen
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
