--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -22,6 +22,16 @@ jobs:
         with:
           version: v2.1.6
           args: -c .golangci.yaml
+  test:
+    name: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+      - name: Test
+        run: go test -v -count=1 -race ./...
   swag-docs:
     name: swagger-gen
     if: github.event_name != 'pull_request'
