--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -38,6 +38,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
           persist-credentials: true
       - uses: actions/setup-go@v5
         with:
@@ -50,6 +52,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          git pull origin ${{ github.head_ref }} --rebase
           git add docs/*
           git commit -m "docs: update swagger documentation [ci skip]" || echo "No changes to commit"
       - name: Push Changes
