Фича: аудит-логирование (#30)

--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,8 @@ SMTP_PORT=587
 EMAIL_WORKER_POOL=10# number of worker threads for sending emails
 EMAIL_QUEUE_SIZE=100
 
+AUDIT_WORKER_POOL=2# number of worker threads for audit logging
+AUDIT_QUEUE_SIZE=1000
+AUDIT_BATCH_SIZE=100
+
 ENVIRONMENT=dev
