Новый механизм сидирования и очистки БД + энд-поинты /dev/*, админ-аккаунт и мелкие фиксы (#36)
feat(seeding): add default admin account and password configuration

handlers, fix goose down statement, fix default log in database pkg

--- a/.env.example
+++ b/.env.example
@@ -32,4 +32,6 @@ AUDIT_WORKER_POOL=2# number of worker threads for audit logging
 AUDIT_QUEUE_SIZE=1000
 AUDIT_BATCH_SIZE=100
 
+DEFAULT_ADMIN_PSWD=default_admin_password
+
 ENVIRONMENT=dev
