--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -61,3 +61,18 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.head_ref }}
+  image-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Docker login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PSWD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build Docker Image and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: user/app:latest
