--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -7,6 +7,11 @@ on:
     ]
   pull_request:
     branches: ["master"]
+
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PSWD }}
+
 jobs:
 #  golang-ci:
 #    name: lint
@@ -71,8 +76,8 @@ jobs:
       - name: Docker login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PSWD }}
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build Docker Image and push
