--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -74,7 +74,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Docker login
-        uses: docker/login-action@v3
+#        uses: docker/login-action@v3
         run: docker login -u ${{env.DOCKER_USERNAME}} -p ${{env.DOCKER_PASSWORD}}
 #        with:
 #          username: ${{ env.DOCKER_USERNAME }}
