--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -74,11 +74,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Docker login
-#        uses: docker/login-action@v3
-        run: docker login -u ${{env.DOCKER_USERNAME}} -p ${{env.DOCKER_PASSWORD}}
-#        with:
-#          username: ${{ env.DOCKER_USERNAME }}
-#          password: ${{ env.DOCKER_PASSWORD }}
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build Docker Image and push
