--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -76,15 +76,11 @@ jobs:
   image-build:
     runs-on: ubuntu-latest
     steps:
-      - name: Debug Docker Username
-        run: echo Username is ${{ secrets.DOCKER_USERNAME }}
-      - name: debug some more
-        run: echo Pswd is ${{secrets.DOCKER_PSWD }}
       - name: Docker login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PSWD }}
+          username: ${{ vars.DOCKER_HUB_NAME }}
+          password: ${{ vars.DOCKER_HUB_PWD }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build Docker Image and push
