--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -79,8 +79,10 @@ jobs:
       - name: Docker login
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_HUB_NAME }}
-          password: ${{ vars.DOCKER_HUB_PWD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+#          username: ${{ vars.DOCKER_HUB_NAME }}
+          password: ${{ secrets.DOCKER_PSWD }}
+#          password: ${{ vars.DOCKER_HUB_PWD }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build Docker Image and push
