--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -81,7 +81,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
 #          username: ${{ vars.DOCKER_HUB_NAME }}
-          password: ${{ secrets.DOCKER_PSWD }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 #          password: ${{ vars.DOCKER_HUB_PWD }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
