--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -79,7 +79,7 @@ jobs:
       - name: Docker login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ vars.DOCKER_HUB_NAME }}
 #          username: ${{ vars.DOCKER_HUB_NAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 #          password: ${{ vars.DOCKER_HUB_PWD }}
@@ -90,3 +90,6 @@ jobs:
         with:
           push: true
           tags: user/app:latest
+#          secrets: |
+#            "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}"
+#            "DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}"
