--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -79,8 +79,8 @@ jobs:
       - name: Docker login
         uses: docker/login-action@v3
         with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
           username: ${{ vars.DOCKER_HUB_NAME }}
-#          username: ${{ vars.DOCKER_HUB_NAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 #          password: ${{ vars.DOCKER_HUB_PWD }}
       - name: Set up Docker Buildx
