refactor(deploy): update docker-compose and workflow for new deployment structure

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -63,9 +63,9 @@ jobs:
             git push origin ${{github.head_ref}}
 #        - name: Push Changes
 #          uses: ad-m/github-push-action@master
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            branch: ${{ github.head_ref }}
+#          with:
+#            github_token: ${{ secrets.GITHUB_TOKEN }}
+#            branch: ${{ github.head_ref }}
     image-build:
       needs: swag-docs
       runs-on: ubuntu-latest
