refactor(deploy): update docker-compose and workflow for new deployment structure

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -61,15 +61,11 @@ jobs:
             git commit -m "docs: update swagger documentation [ci skip]" || echo "No changes to commit"
             git pull origin ${{ github.head_ref }} --rebase
             git push origin ${{github.head_ref}}
-#        - name: Push Changes
-#          uses: ad-m/github-push-action@master
-#          with:
-#            github_token: ${{ secrets.GITHUB_TOKEN }}
-#            branch: ${{ github.head_ref }}
     image-build:
       needs: swag-docs
       runs-on: ubuntu-latest
       steps:
+        - uses: actions/checkout@v4
         - name: Docker login
           uses: docker/login-action@v3
           with:
