--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -69,7 +69,7 @@ jobs:
         - name: Docker login
           uses: docker/login-action@v3
           with:
-            username: ${{ vars.DOCKER_USERNAME }}
+            username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v3
@@ -77,4 +77,4 @@ jobs:
           uses: docker/build-push-action@v6
           with:
             push: true
-            tags: user/app:latest
+            tags: myapp:latest
