--- a/dep2/Dockerfile
+++ b/dep2/Dockerfile
@@ -8,5 +8,5 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o main cmd/app/main.go
 FROM scratch
 WORKDIR /app
 COPY --from=builder /app/main .
-COPY migrations ./migrations
+COPY --from=builder /app/migrations ./migrations
 CMD ["./main"]
