chore: Add Dockerfile path for build action

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -76,5 +76,6 @@ jobs:
         - name: Build Docker Image and push
           uses: docker/build-push-action@v6
           with:
+            file: ./dep2/Dockerfile
             push: true
             tags: myapp:latest
