--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -79,4 +79,4 @@ jobs:
           context: .
           file: ./dep2/Dockerfile
           push: true
-          tags: ${{secrets.DOCKER_USERNAME}}/myapp:v1
+          tags: ${{secrets.DOCKER_USERNAME}}/myapp:${{git.sha}}
