--- a/dep2/docker-compose.yml
+++ b/dep2/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     restart: unless-stopped
     env_file:
       - ./../.env
+    environment:
+      - DB_HOST=db
     ports:
       - "8080:8080"
 
