--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -66,6 +66,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{github.head_ref}}
+          fetch-depth: 0
+      - name: pull new docs
+        run: git pull origin ${{ github.head_ref }}
       - name: Docker login
         uses: docker/login-action@v3
         with:
