--- a/dep2/docker-compose.yml
+++ b/dep2/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     depends_on:
       - db
     image: lawitz/myapp:latest
+    pull_policy: always
     restart: unless-stopped
     env_file:
       - ./../.env
@@ -18,7 +19,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgres/data
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data:
