--- a/dep2/docker-compose.yml
+++ b/dep2/docker-compose.yml
@@ -1,9 +1,25 @@
 services:
   app:
-    build:
-      context: ./..
-      dockerfile: dep2/Dockerfile
-    image: myapp:latest
+    depends_on:
+      - db
+    image: lawitz/myapp:latest
+    pull_policy: always
     restart: unless-stopped
     env_file:
-      - .env
+      - ./../.env
+    environment:
+      - DB_HOST=db
+    ports:
+      - "8080:8080"
+
+  db:
+    image: postgres:17
+    env_file:
+      - ./../.env
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
