--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,16 +10,19 @@ on:
       - master
 
 jobs:
-  test:
+  build_and_push:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout code
-        uses: actions/checkout@v4
+      - name: log into docker hub
+        uses: docker/login-action@v3
         with:
-          fetch-depth: 0
-      - name: setup go
-        uses: actions/setup-go@v5
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
+      - name: build and push
+        uses: docker/build-push-action@v6
         with:
-          go-version: 1.23
-      - name: run tests
-        run: go test -v ./...
+          file: ./dep2/Dockerfile
+          tags:
+            ${{secrets.DOCKER_USERNAME}}/myapp:${{github.sha}}
+            ${{secrets.DOCKER_USERNAME}}/myapp:latest
+          push: true
