--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -61,29 +61,29 @@ jobs:
           git commit -m "docs: update swagger documentation [ci skip]" || echo "No changes to commit"
           git pull origin ${{ github.head_ref }} --rebase
           git push origin ${{github.head_ref}}
-  image-build:
-    needs: swag-docs
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{github.head_ref}}
-          fetch-depth: 0
-      - name: pull new docs
-        run: git pull origin ${{ github.head_ref }}
-      - name: Docker login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build Docker Image and push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./dep2/Dockerfile
-          push: true
-          tags: |
-            ${{secrets.DOCKER_USERNAME}}/myapp:${{github.sha}}
-            ${{secrets.DOCKER_USERNAME}}/myapp:latest
+#  image-build:
+#    needs: swag-docs
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          ref: ${{github.head_ref}}
+#          fetch-depth: 0
+#      - name: pull new docs
+#        run: git pull origin ${{ github.head_ref }}
+#      - name: Docker login
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#      - name: Build Docker Image and push
+#        uses: docker/build-push-action@v6
+#        with:
+#          context: .
+#          file: ./dep2/Dockerfile
+#          push: true
+#          tags: |
+#            ${{secrets.DOCKER_USERNAME}}/myapp:${{github.sha}}
+#            ${{secrets.DOCKER_USERNAME}}/myapp:latest
