--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,8 @@ jobs:
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
+      - name: setup buildx
+        uses: docker/setup-buildx-action@v3
       - name: build and push
         uses: docker/build-push-action@v6
         with:
