--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,8 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     steps:
+#      - name: checkout code
+#        uses: actions/checkout@v4
       - name: log into docker hub
         uses: docker/login-action@v3
         with:
@@ -24,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           file: ./dep2/Dockerfile
-          tags:
+          tags: |
             ${{secrets.DOCKER_USERNAME}}/myapp:${{github.sha}}
             ${{secrets.DOCKER_USERNAME}}/myapp:latest
           push: true
