--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,11 +1,7 @@
 name: test
 
 on:
-  workflow_run:
-    workflows:
-      - Go
-    types:
-      - completed
+  push:
     branches:
       - master
 
@@ -13,8 +9,10 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     steps:
-#      - name: checkout code
-#        uses: actions/checkout@v4
+      - name: checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: log into docker hub
         uses: docker/login-action@v3
         with:
