--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,12 +1,11 @@
 name: Go
 on:
   push:
-    branches: [
-      "master",
-      "dep-test"
-    ]
+    branches:
+      - master
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
 
 jobs:
   golang-ci:
@@ -63,29 +62,30 @@ jobs:
           git pull origin ${{ github.head_ref }} --rebase
           git push origin ${{github.head_ref}}
 
-#  image-build:
-#    needs: swag-docs
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#        with:
-#          ref: ${{github.head_ref}}
-#          fetch-depth: 0
-#      - name: pull new docs
-#        run: git pull origin ${{ github.head_ref }}
-#      - name: Docker login
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v3
-#      - name: Build Docker Image and push
-#        uses: docker/build-push-action@v6
-#        with:
-#          context: .
-#          file: ./dep2/Dockerfile
-#          push: true
-#          tags: |
-#            ${{secrets.DOCKER_USERNAME}}/myapp:${{github.sha}}
-#            ${{secrets.DOCKER_USERNAME}}/myapp:latest
+  image-build:
+    if: github.event_name == 'push' && github.event.ref == 'refs/heads/master'
+    needs: swag-docs
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{github.head_ref}}
+          fetch-depth: 0
+      - name: pull new docs
+        run: git pull origin ${{ github.head_ref }}
+      - name: Docker login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build Docker Image and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./dep2/Dockerfile
+          push: true
+          tags: |
+            ${{secrets.DOCKER_USERNAME}}/myapp:${{github.sha}}
+            ${{secrets.DOCKER_USERNAME}}/myapp:latest
