--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -69,10 +69,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{github.head_ref}}
+          ref: ${{github.ref_name}}
           fetch-depth: 0
       - name: pull new docs
-        run: git pull origin ${{ github.head_ref }}
+        run: git pull origin ${{ github.ref_name }}
       - name: Docker login
         uses: docker/login-action@v3
         with:
