--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -58,7 +58,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add docs/*
-          git commit -m "docs: update swagger documentation [ci skip]" || echo "No changes to commit"
+          git commit -m "docs: update swagger documentation [docs]" || echo "No changes to commit"
           git pull origin ${{ github.head_ref }} --rebase
           git push origin ${{github.head_ref}}
 
