--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: checkout the code
         uses: actions/checkout@v4
+        with:
+          ref: master
+          fetch-depth: 0
       - name: log in to docker hub
         uses: docker/login-action@v3
         with:
