--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           go-version: '1.23'
       - name: Test
-        run: go test -v -count=1 -race ./...
+        run: go test -v -count=1 ./...
   swag-docs:
     name: swagger-gen
     needs:
