--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,13 +11,11 @@ on:
 
 jobs:
   build_and_push:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: checkout the code
         uses: actions/checkout@v4
-#        with:
-#          ref: master
-#          fetch-depth: 0
       - name: log in to docker hub
         uses: docker/login-action@v3
         with:
