--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,13 +1,16 @@
 name: deploy
 
 on:
-  workflow_run:
-    workflows:
-      - Go
-    types:
-      - completed
+  push:
     branches:
       - master
+#  workflow_run:
+#    workflows:
+#      - Go
+#    types:
+#      - completed
+#    branches:
+#      - master
 
 jobs:
   build_and_push:
